--- a/src/components/Categories/CategoryLists.html
+++ b/src/components/Categories/CategoryLists.html
@@ -1,30 +1,5 @@
 <!-- Subcategories -->
 
-<!--hover-->
-<p class="g-gcategory_h">
-  <a class="g-hover" onclick="categ('こたつ')" href="/ec/cat/Kotatu/"
-    ><img
-      class="lozad"
-      data-src="https://www.nitori-net.jp/ecstatic/image/sys-master/images/9011406700574/Kotatsu210921-2.jpg"
-      alt=""
-      width="120"
-      height="120"
-      src="https://www.nitori-net.jp/ecstatic/image/sys-master/images/9011406700574/Kotatsu210921-2.jpg"
-      data-loaded="true" />こたつ<i
-      class="g-i g-i-arrow-r"
-      aria-hidden="true"
-    ></i
-  ></a>
-</p>
-
-<!--first level message-->
-<p class="g-gcategory_more">
-  <a href="/ec/cat/Kotatu/">
-    <span>こたつ&nbsp;カテゴリを見る</span>
-    <i class="g-i g-i-arrow-r" aria-hidden="true"></i>
-  </a>
-</p>
-
 <!-- second level list -->
 <ul class="g-gcategory_list">
   <li>
@@ -68,8 +43,9 @@
   </li>
 </ul>
 
-<!-- first categories -->
+<!--a first level category -->
 <li class="g-gcategory_item g-gcategory_item-active">
+  <!-- text -->
   <div class="g-gcategory_head">
     <a
       class="g-gcategory_name"
@@ -87,7 +63,9 @@
       ><i class="g-i g-i-arrow-d" aria-hidden="true"></i
     ></a>
   </div>
+  <!-- hover -->
   <div class="g-gcategory_children" id="g-gcategory_Kotatu" aria-hidden="false">
+    <!-- background -->
     <p class="g-gcategory_h">
       <a class="g-hover" onclick="categ('こたつ')" href="/ec/cat/Kotatu/"
         ><img
@@ -111,45 +89,59 @@
       </a>
     </p>
     <ul class="g-gcategory_list">
-      <li>
-        <a
-          onclick="categ2('こたつ','こたつテーブル')"
-          href="/ec/cat/Kotatu/KotatuTable/1/"
-          >こたつテーブル</a
-        >
-      </li>
-
-      <li>
-        <a
-          onclick="categ2('こたつ','こたつ布団')"
-          href="/ec/cat/Kotatu/KotatuKakeFuton/1/"
-          >こたつ布団</a
-        >
-      </li>
-
-      <li>
-        <a
-          onclick="categ2('こたつ','こたつ敷布団')"
-          href="/ec/cat/Kotatu/KotatuSikiFuton/1/"
-          >こたつ敷布団</a
-        >
-      </li>
-
-      <li>
-        <a
-          onclick="categ2('こたつ','こたつ布団カバー')"
-          href="/ec/cat/Kotatu/KotatuOtherKakefutonc/1/"
-          >こたつ布団カバー</a
-        >
-      </li>
-
-      <li>
-        <a
-          onclick="categ2('こたつ','こたつ　その他')"
-          href="/ec/cat/Kotatu/KotatuOther/1/"
-          >こたつ　その他</a
-        >
-      </li>
+      <!-- second level.map -->
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ul>
   </div>
 </li>
+
+<!-- menu category button -->
+<button
+  class="g-gnav_btn g-gnav_categoryBtn"
+  type="button"
+  aria-haspopup="true"
+  aria-expanded="false"
+  aria-controls="g-gcategory"
+  data-breakpoints="wide"
+  data-attr='{"wide":{"aria-haspopup":true}}'
+>
+  <i class="g-s g-s-category" aria-hidden="true"></i>カテゴリ<i
+    class="g-i g-i-arrow-d"
+    aria-hidden="true"
+  ></i>
+</button>
+
+<!-- all categories top -->
+<div
+  class="g-gcategory"
+  id="g-gcategory"
+  aria-hidden="true"
+  data-breakpoints="wide"
+>
+  <ul
+    class="g-gcategory_el"
+    data-accordion-group=""
+    data-accordion-group-active="true"
+  >
+    <!-- first level.map -->
+    <li class="g-gcategory_item g-gcategory_item-active"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+    <li class="g-gcategory_item"></li>
+  </ul>
+</div>
