--- a/src/components/Categories/FirstLevelCategories.css
+++ b/src/components/Categories/FirstLevelCategories.css
@@ -1,24 +1,36 @@
 .first-level-categories {
   display: flex;
-  box-sizing: border-box;
   width: 100%;
   height: 40px;
-  padding: 0 15px;
+  line-height: 40px;
+  background-color: #f6f6f6;
+  border: 1px solid #ececec;
+}
+.first-level-categories:hover .second-background {
+  display: block;
+}
+.first-level-categories .first-category-head {
+  display: block;
+  margin-left: 30px;
+}
+.first-level-categories .first-category-head:hover + .second-background {
+  display: block;
 }
 .first-level-categories .second-background {
-  display: block;
+  display: none;
   box-sizing: border-box;
   position: absolute;
   top: 0;
-  left: 240px;
-  width: calc(100% - 240px);
+  left: 223px;
+  width: calc(100% - 223px);
   height: 100%;
-  padding: 20px 15px 20px 30px;
+  padding: 15px 0px 15px 30px;
+}
+.first-level-categories .second-background:hover {
+  display: block;
 }
 .first-level-categories .second-background .second-list {
-  display: none;
+  display: flex;
   flex-wrap: wrap;
-  padding: 0;
-  margin: 0;
   list-style-type: none;
 }/*# sourceMappingURL=FirstLevelCategories.css.map */
