--- a/src/components/Categories/FirstLevelCategories.scss
+++ b/src/components/Categories/FirstLevelCategories.scss
@@ -1,23 +1,35 @@
 .first-level-categories {
   display: flex;
-  box-sizing: border-box;
   width: 100%;
   height: 40px;
-  padding: 0 15px;
-  .second-background {
+  line-height: 40px;
+  background-color: #f6f6f6;
+  border: 1px solid #ececec;
+  &:hover .second-background {
     display: block;
+  }
+  .first-category-head {
+    display: block;
+    margin-left: 30px;
+    &:hover + .second-background {
+      display: block;
+    }
+  }
+  .second-background {
+    display: none;
     box-sizing: border-box;
     position: absolute;
     top: 0;
-    left: 240px;
-    width: calc(100% - 240px);
+    left: 223px;
+    width: calc(100% - 223px);
     height: 100%;
-    padding: 20px 15px 20px 30px;
+    padding: 15px 0px 15px 30px;
+    &:hover {
+      display: block;
+    }
     .second-list {
-      display: none;
+      display: flex;
       flex-wrap: wrap;
-      padding: 0;
-      margin: 0;
       list-style-type: none;
     }
   }
