--- a/src/components/Categories/CategoriesMenu.css
+++ b/src/components/Categories/CategoriesMenu.css
@@ -1,15 +1,10 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 .navigation-bar {
   display: block;
   position: absolute;
   width: 100%;
   height: 50px;
-  padding: 0 15px;
-  box-sizing: border-box;
+  padding: 0 10vw;
+  text-align: center;
   background-color: #e6e6e6;
 }
 .navigation-bar .category-bar {
@@ -17,7 +12,6 @@
   position: relative;
   width: 240px;
   height: 50px;
-  text-align: center;
   line-height: 50px;
   background-color: #f6f6f6;
 }
@@ -29,7 +23,6 @@
   position: relative;
   width: 950px;
   height: 300px;
-  text-align: center;
   border: 1px solid #dbdbdb;
   border-top-width: 0;
   background-color: #fff;
@@ -42,5 +35,4 @@
   overflow-x: hidden;
   width: 240px;
   height: 100%;
-  list-style: none;
 }/*# sourceMappingURL=CategoriesMenu.css.map */
