--- a/src/components/Categories/CategoriesMenu.scss
+++ b/src/components/Categories/CategoriesMenu.scss
@@ -1,22 +1,16 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 .navigation-bar {
   display: block;
   position: absolute;
   width: 100%;
   height: 50px;
-  padding: 0 15px;
-  box-sizing: border-box;
+  padding: 0 10vw;
+  text-align: center;
   background-color: #e6e6e6;
   .category-bar {
     display: block;
     position: relative;
     width: 240px;
     height: 50px;
-    text-align: center;
     line-height: 50px;
     background-color: #f6f6f6;
     &:hover + .categories-background {
@@ -28,7 +22,6 @@
     position: relative;
     width: 950px;
     height: 300px;
-    text-align: center;
     border: 1px solid #dbdbdb;
     border-top-width: 0;
     background-color: #fff;
@@ -40,7 +33,6 @@
       overflow-x: hidden;
       width: 240px;
       height: 100%;
-      list-style: none;
     }
   }
 }
