--- a/src/components/Categories/FirstLevelCategories.scss
+++ b/src/components/Categories/FirstLevelCategories.scss
@@ -9,15 +9,10 @@
     display: block;
   }
   .first-category-head {
-    display: block;
     margin-left: 30px;
-    &:hover + .second-background {
-      display: block;
-    }
   }
   .second-background {
     display: none;
-    box-sizing: border-box;
     position: absolute;
     top: 0;
     left: 223px;
@@ -27,10 +22,21 @@
     &:hover {
       display: block;
     }
+    .second-title {
+      display: flex;
+      margin-left: 80px;
+      .category-img {
+        width: 80px;
+        height: 80px;
+      }
+      .second-title-text {
+        padding-top: 20px;
+        margin-left: 20px;
+      }
+    }
     .second-list {
       display: flex;
       flex-wrap: wrap;
-      list-style-type: none;
     }
   }
 }
