--- a/src/components/Categories/FirstLevelCategories.scss
+++ b/src/components/Categories/FirstLevelCategories.scss
@@ -30,6 +30,8 @@
         height: 80px;
       }
       .second-title-text {
+        font-size: 1.6rem;
+        font-weight: bold;
         padding-top: 20px;
         margin-left: 20px;
       }
