--- a/src/components/Categories/CategoriesMenu.scss
+++ b/src/components/Categories/CategoriesMenu.scss
@@ -28,6 +28,7 @@
       .categories-background {
         display: none;
         position: relative;
+        z-index: 100;
         width: 1240px;
         height: 300px;
         border: 1px solid #dbdbdb;
