--- a/src/components/GoodsListAndDetails/ChooseDetail.styles.scss
+++ b/src/components/GoodsListAndDetails/ChooseDetail.styles.scss
@@ -7,12 +7,27 @@
     .details-choosing-title {
       margin-bottom: 15px;
     }
-    .details-clear-button {
+    .details-clear-button-container {
       margin-top: 20px;
+      .details-clear-button {
+        width: 100%;
+        min-height: 48px;
+        color: #fff;
+        border-color: #ccc;
+        background-color: #ccc;
+        font-weight: normal;
+        font-size: 1rem;
+        // display: inline-flex;
+        transition: background-color 0.2s;
+        vertical-align: middle;
+        border: 1px solid #dbdbdb;
+        border-radius: 4px;
+        appearance: none;
+      }
     }
   }
-  .details-container {
-    margin-top: 2;
-    padding: 20px 30px;
-  }
 }
+// .details-containers-area {
+//   margin-top: 2;
+//   padding: 20px 30px;
+// }
