--- a/src/components/GoodsListAndDetails/SearchBar.styles.scss
+++ b/src/components/GoodsListAndDetails/SearchBar.styles.scss
@@ -1,3 +1,28 @@
 .search-bar-container {
+  display: flex;
+  border-top: 2px solid #009e96;
+  background-color: #f7f7f7;
+  align-items: center;
+  justify-content: space-between;
   margin-bottom: 35px;
+  padding: 5px 20px;
+  .number-of-goods {
+    flex: 1 1;
+  }
+  .sort-by-container {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    .sort-by-bar {
+      border: 1px solid #dbdbdb;
+      border-radius: 4px;
+      width: 100%;
+      height: 34px;
+      padding: 0 39px 0 14px;
+    }
+  }
+  .view-control-bar-container {
+    display: flex;
+    margin-left: 30px;
+  }
 }
