--- a/src/components/GoodsListAndDetails/Background.styles.scss
+++ b/src/components/GoodsListAndDetails/Background.styles.scss
@@ -25,6 +25,9 @@
       .goods-list-container {
         white-space: normal;
       }
+      .page-change-container {
+        display: flex;
+      }
     }
   }
 }
