--- a/src/components/GoodsListAndDetails/ChooseDetail.styles.css
+++ b/src/components/GoodsListAndDetails/ChooseDetail.styles.css
@@ -7,6 +7,25 @@
 .choose-detail-container .details-choosing-and-clear-container .details-choosing-title {
   margin-bottom: 15px;
 }
+.choose-detail-container .details-choosing-and-clear-container .details-choosing-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: -5px;
+  margin-left: -5px;
+}
+.choose-detail-container .details-choosing-and-clear-container .details-choosing-container .details-clear-this-button {
+  display: flex;
+  min-width: 70px;
+  min-height: 30px;
+  padding: 0 11px 0 13px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  border: 1px solid #dbdbdb;
+  border-radius: 100px;
+  background-color: #fff;
+  justify-content: space-between;
+  align-items: center;
+}
 .choose-detail-container .details-choosing-and-clear-container .details-clear-button-container {
   margin-top: 20px;
 }
@@ -25,4 +44,23 @@
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+}
+.choose-detail-container .details-choosing-and-clear-container .details-clear-button-container .details-clear-button-active {
+  width: 100%;
+  min-height: 48px;
+  border-color: #dbdbdb;
+  background-color: #fff;
+  font-weight: normal;
+  font-size: 1rem;
+  transition: background-color 0.2s;
+  vertical-align: middle;
+  border: 1px solid #dbdbdb;
+  border-radius: 4px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.choose-detail-container .details-choosing-and-clear-container .details-clear-button-container .details-clear-button-active:hover {
+  border: 1px solid #009e96;
+  cursor: pointer;
 }/*# sourceMappingURL=ChooseDetail.styles.css.map */
