--- a/src/components/GoodsListAndDetails/ChooseDetail.styles.scss
+++ b/src/components/GoodsListAndDetails/ChooseDetail.styles.scss
@@ -7,6 +7,25 @@
     .details-choosing-title {
       margin-bottom: 15px;
     }
+    .details-choosing-container {
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: -5px;
+      margin-left: -5px;
+      .details-clear-this-button {
+        display: flex;
+        min-width: 70px;
+        min-height: 30px;
+        padding: 0 11px 0 13px;
+        margin-bottom: 5px;
+        margin-left: 5px;
+        border: 1px solid #dbdbdb;
+        border-radius: 100px;
+        background-color: #fff;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
     .details-clear-button-container {
       margin-top: 20px;
       .details-clear-button {
@@ -17,12 +36,28 @@
         background-color: #ccc;
         font-weight: normal;
         font-size: 1rem;
-        // display: inline-flex;
         transition: background-color 0.2s;
         vertical-align: middle;
         border: 1px solid #dbdbdb;
         border-radius: 4px;
         appearance: none;
+      }
+      .details-clear-button-active {
+        width: 100%;
+        min-height: 48px;
+        border-color: #dbdbdb;
+        background-color: #fff;
+        font-weight: normal;
+        font-size: 1rem;
+        transition: background-color 0.2s;
+        vertical-align: middle;
+        border: 1px solid #dbdbdb;
+        border-radius: 4px;
+        appearance: none;
+        &:hover {
+          border: 1px solid #009e96;
+          cursor: pointer;
+        }
       }
     }
   }
