--- a/src/components/GoodsListAndDetails/PageChangeBar.styles.scss
+++ b/src/components/GoodsListAndDetails/PageChangeBar.styles.scss
@@ -4,6 +4,24 @@
   justify-content: center;
   align-items: center;
   margin-top: 50px;
+  .previous-page-button {
+    padding-right: 30px;
+  }
+  .page-num-container-now {
+    color: #009e96;
+    background-color: #dcfff6;
+    font-weight: normal;
+    display: flex;
+    flex: 1 1 auto;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.2s;
+    vertical-align: middle;
+    border: 1px solid #009e96;
+    border-radius: 4px;
+    min-width: 32px;
+    min-height: 32px;
+  }
   .page-num-container {
     color: #009e96;
     font-weight: normal;
@@ -18,6 +36,9 @@
     background-color: #fff;
     min-width: 32px;
     min-height: 32px;
+    &:hover {
+      border: 1px solid #009e96;
+    }
   }
   .next-page-button {
     padding-left: 30px;
