--- a/src/components/GoodsListAndDetails/GoodsCard.styles.css
+++ b/src/components/GoodsListAndDetails/GoodsCard.styles.css
@@ -1,5 +1,49 @@
 .goods-card-container {
-  width: 187px;
+  width: 180px;
   margin-bottom: 60px;
-  margin-right: 13px;
+  margin-right: 20px;
+}
+.goods-card-container .item-info {
+  margin-top: 15px;
+  display: block;
+}
+.goods-card-container .item-info .goods-price {
+  margin-bottom: 10px;
+}
+.goods-card-container .item-info .goods-comment {
+  margin-top: 10px;
+}
+.goods-card-container .item-info .goods-colors-container {
+  margin-top: 10px;
+}
+.goods-card-container .item-info .goods-colors-container .goods-colors-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: -5px;
+  margin-left: -5px;
+}
+.goods-card-container .item-info .goods-colors-container .goods-colors-list .colors-img-container {
+  width: 22px;
+  height: 22px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  border: 1px solid #dbdbdb;
+  border-radius: 50%;
+}
+.goods-card-container .item-info .goods-colors-container .goods-colors-list .colors-img-container .colors-img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 50%;
+}
+.goods-card-container .item-info .goods-details-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  margin-bottom: -5px;
+  margin-left: -5px;
+}
+.goods-card-container .item-info .goods-details-container .details-img-container {
+  margin-bottom: 5px;
+  margin-left: 5px;
 }/*# sourceMappingURL=GoodsCard.styles.css.map */
