--- a/src/components/GoodsListAndDetails/GoodsCard.styles.scss
+++ b/src/components/GoodsListAndDetails/GoodsCard.styles.scss
@@ -1,5 +1,49 @@
 .goods-card-container {
-  width: 187px;
+  width: 180px;
   margin-bottom: 60px;
-  margin-right: 13px;
+  margin-right: 20px;
+  .item-info {
+    margin-top: 15px;
+    display: block;
+    .goods-price {
+      margin-bottom: 10px;
+    }
+    .goods-comment {
+      margin-top: 10px;
+    }
+    .goods-colors-container {
+      margin-top: 10px;
+      .goods-colors-list {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: -5px;
+        margin-left: -5px;
+        .colors-img-container {
+          width: 22px;
+          height: 22px;
+          margin-bottom: 5px;
+          margin-left: 5px;
+          border: 1px solid #dbdbdb;
+          border-radius: 50%;
+          .colors-img {
+            width: 100%;
+            height: 100%;
+            display: block;
+            border-radius: 50%;
+          }
+        }
+      }
+    }
+    .goods-details-container {
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 10px;
+      margin-bottom: -5px;
+      margin-left: -5px;
+      .details-img-container {
+        margin-bottom: 5px;
+        margin-left: 5px;
+      }
+    }
+  }
 }
