--- a/src/components/SkuPage/SkuBody/SkuPictures.styles.css
+++ b/src/components/SkuPage/SkuBody/SkuPictures.styles.css
@@ -1,3 +1,20 @@
 .img-swiper-container {
   max-width: 415px;
+  height: 250px;
+}
+.img-swiper-container .swiper {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.img-swiper-container .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  height: calc((100% - 30px) / 2) !important;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=SkuPictures.styles.css.map */
