--- a/src/components/SkuPage/SkuBody/SkuPictures.styles.css
+++ b/src/components/SkuPage/SkuBody/SkuPictures.styles.css
@@ -1,20 +1,32 @@
-.img-swiper-container {
+.img-container {
   max-width: 415px;
-  height: 250px;
+  height: 14.0056022409%;
 }
-.img-swiper-container .swiper {
+.img-container .big-img-container {
+  margin-bottom: 10px;
+}
+.img-container .swiper {
   width: 100%;
   height: 100%;
   margin-left: auto;
   margin-right: auto;
 }
-.img-swiper-container .swiper-slide {
+.img-container .swiper .swiper-horizontal > .swiper-pagination-bullets,
+.img-container .swiper .swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: 0;
+}
+.img-container .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
-  height: calc((100% - 30px) / 2) !important;
+  height: calc((100% - 10px) / 2) !important;
   /* Center slide text vertically */
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.img-container img {
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=SkuPictures.styles.css.map */
