--- a/src/components/SkuPage/SkuBody/SkuPictures.styles.scss
+++ b/src/components/SkuPage/SkuBody/SkuPictures.styles.scss
@@ -1,18 +1,26 @@
-.img-swiper-container {
+.img-container {
   max-width: 415px;
-  height: 250px;
+  height: calc(100% / 7.14);
+  .big-img-container {
+    margin-bottom: 10px;
+  }
   .swiper {
     width: 100%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
+    .swiper-horizontal > .swiper-pagination-bullets,
+    .swiper-pagination-bullets.swiper-pagination-horizontal {
+      bottom: 0;
+    }
   }
 
   .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
-    height: calc((100% - 30px) / 2) !important;
+    height: calc((100% - 10px) / 2) !important;
+    // width: calc((100% - 10px) / 4) !important;
 
     /* Center slide text vertically */
     display: -webkit-box;
@@ -28,4 +36,9 @@
     -webkit-align-items: center;
     align-items: center;
   }
+}
+
+.img-container img {
+  width: 100%;
+  height: 100%;
 }
