--- a/src/components/SkuPage/SkuPage.styles.css
+++ b/src/components/SkuPage/SkuPage.styles.css
@@ -19,6 +19,7 @@
 .sku-body-area .sku-body-container .sku-body-left .sku-body-left-flexbox {
   display: flex;
   flex-wrap: wrap;
+  height: 100%;
 }
 .sku-body-area .sku-body-container .sku-body-left .sku-body-left-flexbox .pictures-container {
   width: calc((100% - 40px) / 2 - 0.1px);
@@ -31,17 +32,91 @@
   padding: 20px;
 }
 .sku-body-area .sku-body-container .sku-body-left .sku-body-left-flexbox .sku-introduction-and-QA-container {
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
+}
+.sku-body-area .sku-body-container .sku-body-left .sku-body-left-flexbox .sku-introduction-and-QA-container .sku-introduction-container {
+  width: calc((100% - 40px) / 2 - 0.1px);
+  padding: 20px;
+  height: 800px;
+  background-color: rgb(214, 198, 168);
+}
+.sku-body-area .sku-body-container .sku-body-left .sku-body-left-flexbox .sku-introduction-and-QA-container .sku-QA-review-container {
+  width: calc((100% - 40px) / 2 - 0.1px);
+  padding: 20px;
 }
 .sku-body-area .sku-body-container .sku-body-right {
   display: inline-block;
   vertical-align: top;
-  background-color: aquamarine;
+  background-color: #f7f7f7;
   width: 290px;
   margin-left: 40px;
-}
-.sku-body-area .put-into-the-cart-container {
   position: -webkit-sticky;
   position: sticky;
   top: 40px;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.swiper {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+
+.mySwiper2 {
+  height: 80%;
+  width: 100%;
+}
+
+.mySwiper {
+  height: 20%;
+  box-sizing: border-box;
+  padding: 10px 0;
+}
+
+.mySwiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+.mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=SkuPage.styles.css.map */
